--- a/client/src/components/common/GlobalLoading/GlobalLoading.css
+++ b/client/src/components/common/GlobalLoading/GlobalLoading.css
@@ -1,59 +1,75 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #fff;
+}
+
+.loading {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading .one {
+  height: 140px;
+  width: 140px;
+  border: 6px solid #04ddb2;
+  transform: rotate(45deg);
+  border-radius: 0 50% 50% 50%;
+  position: relative;
+  animation: move 1s ease-in-out infinite alternate-reverse;
+}
+
+.loading .one::before {
+  content: "";
+  position: absolute;
+  height: 55%;
+  width: 55%;
+  border-radius: 50%;
+  border: 6px solid transparent;
+  border-top-color: #04ddb2;
+  border-bottom-color: #04ddb2;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
   }
-  
-  body {
-    background-color: "#fff";
+}
+
+@keyframes move {
+  to {
+    transform: translateY(20px) rotate(45deg);
   }
-  
-  .loading {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+}
+
+.loading2 {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading2 img {
+  width: 340px;
+  animation: blink .8s infinite;
+}
+
+@keyframes blink {
+  0%, 100% {
+    opacity: 1;
   }
-  
-  .loading .one {
-    height: 140px;
-    width: 140px;
-    border: 6px solid #04ddb2;
-    transform: rotate(45deg);
-    border-radius: 0 50% 50% 50%;
-    position: relative;
-    animation: move 0.5s linear infinite alternate-reverse;
+  50% {
+    opacity: 0;
   }
-  .loading .one::before {
-    content: "";
-    position: absolute;
-    height: 55%;
-    width: 55%;
-    border-radius: 50%;
-    border: 6px solid transparent;
-    border-top-color: #04ddb2;
-    border-bottom-color: #04ddb2;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    animation: rotate 1s linear infinite;
-  }
-  
-  @keyframes rotate {
-    to {
-      transform: translate(-50%, -50%) rotate(360deg);
-    }
-  }
-  @keyframes move {
-    to {
-      transform: translateY(20px) rotate(45deg);
-    }
-  }
-  
-  .loading2{
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+}
